--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html {
   font-size: calc(var(--font-body-scale) * 62.5%);
   height: 100%;
   height: -webkit-fit-content;
+  overflow-x: hidden;
 }
 
 body {
@@ -127,7 +128,7 @@ img {
 /* Only for Home Component Navbar Color TransParent to White */
 .mainHover {
   position: absolute;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-bottom: 1px solid transparent;
   background-color: #0000000f;
 }
@@ -135,13 +136,13 @@ img {
 .mainHover::before {
   content: "";
   position: absolute;
-  top: -100%;
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: #fff;
   transform: scaleY(0);
-  transition: transform 0.5s ease;
+  transition: transform 0.4s ease;
   z-index: 0;
 }
 
@@ -393,7 +394,7 @@ li a:hover {
 
 .liElements {
   position: absolute;
-  overflow: hidden;
+  /* overflow: hidden; */
   border-bottom: 1px solid rgb(210, 213, 217);
   background-color: #fff;
   padding-bottom: 3px;
@@ -562,7 +563,7 @@ li a:hover {
 
 /* for the smooth close of navbar */
 .sidebarOpenHover {
-  overflow: hidden;
+  /* overflow: hidden; */
   .logo,
   .navIcon,
   .form,
@@ -1494,4 +1495,37 @@ li a:hover {
   top: -45%;
   background-color: rgb(23, 22, 21);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.navBarHoverMenu {
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.onHoverMenu {
+  display: none;
+  position: absolute;
+  top: 105%;
+  left: 0;
+  background-color: #fff;
+  color: #000;
+  min-width: 160px;
+  z-index: 999;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+  transition: display 5s ease-in-out;
+  padding-block: 10px;
+}
+
+.navBarHoverMenu:hover .onHoverMenu {
+  display: block;
+}
+
+.onHoverMenuOpt {
+  padding-left: 17.5px;
+  padding-block: 7.5px;
+  cursor: pointer;
+}
+
+.onHoverMenuOpt:hover {
+  background-color: rgba(234, 227, 223, 0.8); /* Highlight option on hover */
 }
