--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -40,7 +40,7 @@
 }
 
 .ProductPageMain {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   margin: 0 auto;
@@ -65,6 +65,8 @@
 }
 
 .productCardMain {
+  max-width: 1100px;
+  min-width: 100%;
   padding-block: 10px;
   display: flex;
   overflow: hidden;
@@ -219,6 +221,7 @@
 }
 
 .filterAndSortBtn {
+  position: relative;
   display: block;
   display: flex;
   align-items: center;
@@ -385,6 +388,7 @@
 }
 
 .productCardMain {
+  position: relative;
   display: flex;
 }
 
@@ -461,4 +465,10 @@
   @media (max-width: 300px) {
     width: 13px;
   }
+}
+
+.noProductAvailable{
+  width: 100%;
+  text-align: center;
+  padding-block: 50px;
 }
