--- a/src/index.css
+++ b/src/index.css
@@ -1502,11 +1502,11 @@ li a:hover {
 
 .navBarHoverMenu {
   position: relative;
-  transition: all 5s ease-in-out;
 }
 
 .onHoverMenu {
-  display: none;
+  max-height: 0;
+  overflow: hidden;
   position: absolute;
   top: 105%;
   left: 0;
@@ -1515,13 +1515,13 @@ li a:hover {
   min-width: 160px;
   z-index: 999;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
-  transition: display 5s ease-in-out;
-  padding-block: 10px;
+  transition: max-height 0.25s ease-in-out;
+  padding-block: 0;
 }
 
 .navBarHoverMenu:hover .onHoverMenu {
-  animation: downIn 0.7s ease-in-out forwards;
-  display: block;
+  max-height: 300px;
+  padding-block: 10px;
 }
 
 @keyframes downIn {
