--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -231,6 +231,7 @@
 }
 
 .miniFilter {
+  position: relative;
   width: 100%;
   display: none;
   @media (max-width: 750px) {
@@ -240,6 +241,7 @@
 }
 
 .filterAndSortBtnMini {
+  position: relative;
   cursor: pointer;
   font-size: 12px;
   color: rgb(26, 27, 24);
@@ -467,17 +469,17 @@
   }
 }
 
-.noProductAvailable{
+.noProductAvailable {
   width: 100%;
   text-align: center;
   padding-block: 50px;
 }
 
-.filterBtnLoader{
+.filterBtnLoader {
   filter: invert(100%) brightness(200%);
-    transition: filter 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
 }
 
-.blurBackground{
+.blurBackground {
   opacity: 0.5;
 }
