--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -86,6 +86,7 @@
 }
 
 .productCard {
+  margin-bottom: 20px;
   position: relative;
   width: 23%;
   overflow: hidden;
@@ -97,9 +98,11 @@
   }
   @media (max-width: 750px) {
     width: 48.2%;
+    margin-bottom: 10px;
   }
   @media (max-width: 485px) {
     width: 47.5%;
+    margin-bottom: 7px;
   }
 }
 
