--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -525,7 +525,7 @@
 }
 
 .sortMenuActive {
-  height: 130px;
+  height: 119px;
 }
 
 .sortMenuActive p {
@@ -552,12 +552,11 @@
 }
 
 .sortOptionsBig {
+  padding-inline: 20px;
   display: flex;
   gap: 8px;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin-bottom: 6px;
 }
 
 .removeSortButtonSmall {
