--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -485,8 +485,17 @@
 
 .noProductAvailable {
   width: 100%;
-  text-align: center;
-  padding-block: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.no-result-detail{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .filterBtnLoader {
@@ -607,4 +616,13 @@
   padding-block: 8px;
   padding-inline: 40px;
   opacity: 0.7;
+}
+
+
+.no-result-image{
+  width: 320px;
+
+  @media (max-width : 370px) {
+    width: 260px;
+  }
 }
