--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -7,6 +7,9 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 10px;
   transition: display 0.9s ease-in-out;
+  @media (max-width: 1030px) {
+    top: 32px !important;
+  }
   @media (max-width: 834px) {
     display: none !important;
   }
@@ -21,11 +24,17 @@
   border-radius: 5px;
   transition: display 0.9s ease-in-out;
   @media (max-width: 834px) {
-    padding-inline: 0px;
-    width: 98% !important;
+    padding-inline: 5px;
+    width: 97.5% !important;
     display: block;
-    margin-inline: 3px;
+    margin-inline-start: 3px;
     top: 32px !important;
+  }
+  @media (max-width: 650px) {
+    width: 96.5% !important;
+  }
+  @media (max-width: 470px) {
+    width: 95% !important;
   }
 }
 
@@ -36,15 +45,17 @@
   }
 }
 
-.SearchBoxContent {
-  padding-inline: 10px;
-}
 .beforeInputTextSearch {
-  width: 400px;
-  padding: 20px;
+  padding-block: 14px;
+  margin-bottom: 20px;
+  padding-inline: 10px;
+  width: 600px;
   @media (max-width: 834px) {
     padding-inline: 0px;
     width: 100% !important;
+  }
+  @media (max-width: 830px) {
+    margin-bottom: 10px;
   }
 }
 
@@ -55,4 +66,192 @@
     padding-inline: 0px;
     width: 100% !important;
   }
+}
+
+.recentSearches {
+  margin-bottom: 10px;
+}
+
+.headingOfSearches {
+  display: flex;
+  justify-content: space-between;
+}
+
+.recentSearchText {
+  overflow-x: scroll;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 0px !important;
+}
+
+.searchText {
+  text-transform: capitalize;
+  font-size: 13.5px;
+  font-weight: 400;
+  background-color: #fff;
+  color: rgb(18, 18, 18);
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  border: 0.8px solid rgb(204, 204, 204);
+  padding-inline: 12px;
+  line-height: 26px;
+  letter-spacing: 0.6px;
+  margin: 5px;
+  @media (max-width: 600px) {
+    padding-inline: 8px;
+    line-height: 20px;
+    font-size: 12.5px;
+  }
+}
+
+.headingNameSearch {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 26px;
+  letter-spacing: 0.6px;
+}
+
+.binOrXIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.binIcon {
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+}
+
+.binIcon:hover {
+  scale: 0.9;
+  transition: scale 0.3s ease-in-out;
+}
+
+.xRedIcon {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+}
+
+.xRedIcon:hover {
+  scale: 0.9;
+  transition: scale 0.3s ease-in-out;
+}
+
+.noHistory {
+  letter-spacing: 0.6px;
+  font-size: 14px !important;
+  line-height: 26px !important;
+  @media (max-width: 375px) {
+    font-size: 13px !important;
+  }
+}
+
+.recommendedProductCard {
+  gap: 8px !important;
+  width: 100% !important;
+  overflow-x: auto; /* Enable horizontal scroll */
+  display: flex;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+}
+
+.productCardSearchMain {
+  width: 24%;
+  margin-top: 7px;
+  flex: 0 0 auto;
+  @media (max-width: 750px) {
+    width: 29%;
+  }
+  @media (max-width: 510px) {
+    width: 42.5%;
+  }
+}
+
+.search-card-badge-bottom {
+  position: absolute;
+  z-index: 2;
+  bottom: 5px;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 0.6px;
+  color: #fff;
+  word-break: break-word;
+  -webkit-font-smoothing: antialiased;
+  padding-left: 4px;
+  font-weight: 550;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.cardImage {
+  background-color: #f2f2f2;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.searchProductCardImg {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  width: 100%;
+  padding-block: 10px;
+  transition: all 0.2s ease-in-out;
+}
+
+.searchProductCardImg:hover {
+  transform: scale(1.02);
+  transition: transform 0.2s ease-in-out;
+}
+
+.searchCardProductName {
+  box-sizing: border-box;
+  color: rgb(26, 27, 24);
+  cursor: pointer;
+  display: -webkit-box !important;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.63px;
+  margin-top: 2px;
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.searchCardPrice {
+  display: flex;
+  align-items: center;
+  gap: 7px;
+}
+
+.searchCardP {
+  font-size: 12.8px !important;
+}
+
+.searchCardMrp {
+  font-size: 10px !important;
+}
+
+.searchDiscountBadge {
+  padding: 4.5px;
+  width: 34.45px;
+  border: 0.8px solid rgb(113, 190, 169);
+  background-color: rgb(100, 187, 164);
 }
