--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -59,15 +59,6 @@
   }
 }
 
-.afterInputTextSearch {
-  width: 500px;
-  padding: 20px;
-  @media (max-width: 834px) {
-    padding-inline: 0px;
-    width: 100% !important;
-  }
-}
-
 .recentSearches {
   margin-bottom: 10px;
 }
@@ -164,7 +155,7 @@
   width: 100% !important;
   overflow-x: auto; /* Enable horizontal scroll */
   display: flex;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   scroll-behavior: smooth;
 }
 
@@ -254,4 +245,91 @@
   width: 34.45px;
   border: 0.8px solid rgb(113, 190, 169);
   background-color: rgb(100, 187, 164);
+}
+
+.afterInputTextSearch {
+  padding-block: 14px;
+  padding-inline: 10px;
+  width: 650px;
+  @media (max-width: 834px) {
+    padding-inline: 0px;
+    width: 100% !important;
+  }
+}
+
+.suggestionsData {
+  max-height: 410px !important;
+  overflow-y: auto;
+  scrollbar-width: thin;
+}
+
+.suggestionsDataCard {
+  display: grid;
+  column-gap: 6px;
+  grid-template-columns: repeat(4, 1fr);
+  @media (max-width: 649px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 485px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.suggestionCardMain {
+  margin-bottom: 10px;
+}
+
+.suggestionHeading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 0.8px solid rgb(210, 213, 217);
+}
+
+.icon-Heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+}
+
+.suggestion-no-result {
+  margin-top: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.no-result-suggestion {
+  padding-top: 40px;
+  font-size: 19px;
+  line-height: 27px;
+  letter-spacing: 0.63px;
+  font-weight: 600;
+  @media (max-width: 480px) {
+    font-size: 18px;
+  }
+}
+
+.no-result-other-keyWord {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.63px;
+  color: rgba(6, 27, 24, 0.729);
+}
+
+.other-products{
+  margin-block: 18px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 17.65px;
+  letter-spacing: 0.63px;
+  line-height: 22px;
+  @media (max-width: 480px) {
+    font-size: 16px;
+  }
 }
