--- a/src/css/account.css
+++ b/src/css/account.css
@@ -96,6 +96,7 @@
   font-weight: 600;
   color: #000000cf;
   @media (max-width: 425px) {
+    line-height: 20px;
     font-size: 14px;
   }
   @media (max-width: 355px) {
@@ -311,7 +312,8 @@
 
 .addAddressBtn {
   line-height: 22px !important;
-  padding-block: 10px;
+  margin-top: 1px !important;
+  margin-bottom: 20px;
   font-size: 14px !important;
   @media (max-width: 450px) {
     font-size: 12px !important;
@@ -338,7 +340,7 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
-  @media (max-width : 600px) {
+  @media (max-width: 600px) {
     gap: 14px;
   }
 }
@@ -394,4 +396,195 @@
 .addressBtn {
   margin-top: 0px !important;
   width: 130px !important;
+}
+
+.SavedAddMain {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  row-gap: 20px;
+  @media (max-width: 800px) {
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+  }
+}
+
+.savedAddressSingle {
+  border: 0.8px solid rgba(0, 0, 0, 0.38);
+  padding: 20px;
+  border-radius: 5px;
+  @media (max-width: 355px) {
+    padding: 15px;
+  }
+}
+
+.savedAddressSingle:hover {
+  background-color: rgb(240, 240, 240);
+  transition: background-color 0.3s ease-in-out;
+  .deleteAddress {
+    opacity: 1;
+  }
+}
+
+.savedAddressHeading {
+  text-align: center;
+  margin-bottom: 15px;
+  @media (max-width: 750px) {
+    margin-bottom: 10px;
+  }
+}
+
+.savedAddressText {
+  text-transform: capitalize;
+  line-height: 26px;
+  letter-spacing: 1px;
+  color: rgb(103, 102, 102);
+  font-size: 15px;
+  @media (max-width: 425px) {
+    line-height: 20px;
+    font-size: 13px;
+  }
+  @media (max-width: 355px) {
+    font-size: 11.5px;
+  }
+}
+
+.fullBlackText {
+  color: #000 !important;
+}
+
+.SaveAsOrDelete {
+  display: flex;
+  justify-content: space-between;
+}
+
+.deleteAddress {
+  width: 17px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.savedAddressLoader {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Order Section */
+
+.orderSectionMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.orderSectionImg img {
+  width: 100px;
+  opacity: 0.8;
+}
+
+.orderSectionText {
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.83px;
+  line-height: 24px;
+  text-align: center;
+  color: rgb(103, 102, 102);
+  @media (max-width: 550px) {
+    font-size: 14px;
+  }
+}
+
+.orderSecBtn {
+  margin-top: 20px;
+  width: 150px;
+}
+
+/* Bella Cash */
+
+.BellaCashMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.bellaCashHeading {
+  margin-bottom: 20px;
+  @media (max-width: 550px) {
+    margin-bottom: 10px;
+  }
+}
+
+.earnSpentCurr {
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  @media (max-width: 550px) {
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: auto auto auto; */
+  }
+}
+
+.bellaCashSingle:nth-child(3) {
+ @media (max-width: 550px) {
+  grid-column: 1 / -1; 
+  background-color: rgb(239, 239, 239);
+  border-radius: 5px;
+  margin-top: 10px;
+ }
+}
+
+.bellaCashSingle {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  font-size: 21px;
+  @media (max-width: 750px) {
+    font-size: 18px;
+  }
+  @media (max-width: 450px) {
+    font-size: 17px;
+  }
+}
+
+.bellaRightLine {
+  border-right: 0.8px solid rgb(206, 206, 206);
+}
+
+.bellaRightLineNone{
+  @media (max-width: 550px) {
+    border: none !important;
+  }
+}
+
+.bellaText {
+  line-height: 32px;
+  padding-bottom: 7px;
+}
+
+.bellaTextPrice {
+  line-height: 25px;
+  font-weight: 600;
+}
+
+.bellaCashBottom{
+  margin-top: 30px;
+}
+
+.bellaCashRecentTrText{
+  margin-top: 25px;
+  font-size: 20px;
+  @media (max-width: 425px) {
+    font-size: 18px;
+  }
+  @media (max-width: 355px) {
+    font-size: 16px;
+  } 
 }
