--- a/src/css/account.css
+++ b/src/css/account.css
@@ -459,10 +459,15 @@
 }
 
 .deleteAddress {
-  width: 17px;
+  width: 18px;
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+}
+
+.deleteAddress:hover{
+  scale: 1.03;
+  transition: scale 0.2s ease-in-out;
 }
 
 .savedAddressLoader {
