--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ html {
   height: 100%;
   height: -webkit-fit-content;
   overflow-x: hidden;
+  scrollbar-width: thin;
 }
 
 body {
@@ -691,18 +692,9 @@ li a:hover {
   .searchBarBig {
     display: block;
   }
-  .css-1u2w381-MuiModal-root-MuiDrawer-root {
-    /* top: 122.5px !important; */
-  }
-
-  /* for deployed version issues */
-  .css-y28f86 {
-    /* top: 122.5px !important; */
-  }
 
   /* for white background one */
   .MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation16.MuiDrawer-paper.MuiDrawer-paperAnchorLeft.css-j400xw-MuiPaper-root-MuiDrawer-paper {
-    /* top: 122.5px; */
     border-top: 1px solid rgb(210, 213, 217);
     background-color: #fff;
     cursor: default !important;
@@ -711,21 +703,10 @@ li a:hover {
 
   /* for deployed version issues */
   .css-nsg84x {
-    /* top: 122.5px !important; */
     border-top: 1px solid rgb(210, 213, 217);
     background-color: #fff;
     cursor: default !important;
     width: 85%;
-  }
-
-  /* for transparent */
-  .MuiBackdrop-root.MuiModal-backdrop.css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop {
-    /* top: 122.5px !important; */
-  }
-
-  /* for deployed version issues */
-  .css-919eu4 {
-    /* top: 122.5px !important; */
   }
 }
 
